Changed standard background color for textareas and selects to white

--- a/site/resources/themes/standard.less
+++ b/site/resources/themes/standard.less
@@ -28,6 +28,7 @@ http://www.earthli.com/software/webcore
 
 @background_color: white;
 @link_hover_color: red;
+@edit_control_background_color: @background_color;
 
 a:link
 {
