--- a/site/resources/themes/standard.css
+++ b/site/resources/themes/standard.css
@@ -208,7 +208,7 @@ ul.menu .menu-item-description {
 }
 .text-control,
 .menu-control {
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   color: #666666;
   border-color: #c2c2c2;
 }
