Fixed selected color in the ice skin

--- a/site/resources/themes/ice.less
+++ b/site/resources/themes/ice.less
@@ -35,7 +35,7 @@ http://www.earthli.com/software/webcore
 @highlighted_text_color: #0A0;
 @control_background_color: #F8F8F8;
 @edit_control_background_color: @background_color;
-@selected_text_color: @title_color;
+@selected_text_color: @h4_color;
 @selected_control_background_color: @title_color;
 @selected_control_text_color: @background_color;
 @disabled_control_background_color: @background_color;
