--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -208,16 +208,16 @@ dd
   margin: @small_spacing 0 @standard_spacing 1.5em
 }
 
-a:active,
-a:hover
-{
-  text-decoration: underline
-}
-
 a:link,
 a:visited
 {
   text-decoration: none
+}
+
+a:active,
+a:hover
+{
+  text-decoration: underline
 }
 
 a img 
@@ -1006,6 +1006,11 @@ a.button:link, a.button:visited
 {
   position: relative;
   top: 2px;
+}
+
+.button .icon
+{
+  display: inline-block;
 }
 
 .pager .button
