--- a/site/resources/styles/core/small.css
+++ b/site/resources/styles/core/small.css
@@ -73,3 +73,18 @@ h5,
 {
   font-size: 8pt;
 }
+
+  .icon.sixteen
+  {
+    padding-top: 3px;
+  }
+
+  .icon.twenty
+  {
+    padding-top: .4em;
+  }
+
+  .icon.thirty-two
+  {
+    padding-top: 1em;
+  }
