--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -472,17 +472,20 @@ table.basic > tbody > tr > td.empty-label {
 }
 .thirty-two {
   padding-left: 37px;
+  padding-top: .8em;
   background: no-repeat 0 5px;
   min-height: 42px;
 }
 .twenty {
   padding-left: 25px;
+  padding-top: .4em;
   background: no-repeat;
   min-height: 26px;
 }
 .sixteen {
   padding-left: 21px;
-  background: no-repeat 0 5px;
+  padding-top: 3px;
+  background: no-repeat 0 2px;
   min-height: 18px;
 }
 .no-label {
@@ -682,6 +685,7 @@ a.button:visited {
 }
 .button .icon {
   display: inline-block;
+  box-sizing: border-box;
 }
 .pager .button {
   width: 2.2em;
