--- a/site/resources/styles/fonts/raleway.css
+++ b/site/resources/styles/fonts/raleway.css
@@ -1,5 +1,8 @@
 @import "http://fonts.googleapis.com/css?family=Raleway:400,700";
 
+
+/*@import "http://brick.a.ssl.fastly.net/Raleway:400,400i,700,700i";*/
+
 body,
 .text-control,
 .menu-control
