--- a/site/resources/styles/core/small.css
+++ b/site/resources/styles/core/small.css
@@ -60,7 +60,8 @@ h5,
 .info-box-bottom,
 .info-box-top,
 .footnote-reference,
-.subdued
+.subdued,
+.form-basic-description
 {
   font-size: 8pt;
 }
