Fixes for the base stylesheets:
- Added mixin called .set-color() to set the color + overrides for known conflicts (e.g. code elements in links)
- Fixed formatting of tiny pictures on the home page (fixed margins between columns and rows)
- Minor fix for form formatting

--- a/site/resources/styles/core/core-mixins.less
+++ b/site/resources/styles/core/core-mixins.less
@@ -1,5 +1,15 @@
 @background_color: gray;
 
+.set-color(@c)
+{
+  color: @c;
+
+  code
+  {
+    color: @c;
+  }
+}
+
 .engraved_border(@depth: 1px, @highlight_color: lighten(@background_color, 30%), @shadow_color: darken(@background_color, 10%))
 {
   border: @depth solid;
