--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -683,6 +683,10 @@ table.basic > tbody > tr > td.empty-label
   padding-bottom: 2px;
 }
 
+.form-basic-description
+{
+  padding-top: @small_spacing;
+}
 
 /* @end */
 
@@ -1696,4 +1700,16 @@ hr
 .entries .folder
 {
   width: 170px;
+}
+
+.tiny-picture
+{
+  margin-right: @small_spacing;
+  margin-bottom: @small_spacing;
+  line-height: 0;
+}
+
+.tiny-picture a
+{
+  display: inline-block;
 }
