--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -461,6 +461,9 @@ table.basic > tbody > tr > td.empty-label {
   padding-top: 2px;
   padding-bottom: 2px;
 }
+.form-basic-description {
+  padding-top: 5px;
+}
 /* @end */
 /* @group Icons */
 .icon {
@@ -1139,4 +1142,12 @@ hr {
 }
 .entries .folder {
   width: 170px;
+}
+.tiny-picture {
+  margin-right: 5px;
+  margin-bottom: 5px;
+  line-height: 0;
+}
+.tiny-picture a {
+  display: inline-block;
 }
