--- a/site/resources/themes/eggplant.css
+++ b/site/resources/themes/eggplant.css
@@ -27,29 +27,55 @@ body {
   background-color: #553355;
   color: #eeeecc;
 }
+code {
+  color: #eeeecc;
+}
 a:link,
 a:visited {
+  color: #ffff99;
+}
+a:link code,
+a:visited code {
   color: #ffff99;
 }
 a:hover,
 a:active {
   color: #ff9999;
 }
+a:hover code,
+a:active code {
+  color: #ff9999;
+}
 h1 {
+  color: #bb99bb;
+}
+h1 code {
   color: #bb99bb;
 }
 h2 {
   color: #bb99bb;
-  border-color: #bb99bb;
+}
+h2 code {
+  color: #bb99bb;
 }
 h3 {
+  color: #bb99b0;
+}
+h3 code {
   color: #bb99b0;
 }
 h4 {
   color: #bb99b0;
 }
+h4 code {
+  color: #bb99b0;
+}
 .chart-title,
 .preview-title {
+  color: #bb99bb;
+}
+.chart-title code,
+.preview-title code {
   color: #bb99bb;
 }
 .banner {
@@ -159,9 +185,6 @@ pre > code,
 }
 .selected {
   color: #d17b9c;
-}
-code {
-  color: #eeeecc;
 }
 .quote,
 .quote-inline,
